Gemlite-bundle/Gemlite-runtime/src/main/java/gemlite/core/internal/index/antlr/CreateIndexParser.java
/*                                                                         
 * Copyright 2010-2013 the original author or authors.                     
 *                                                                         
 * Licensed under the Apache License, Version 2.0 (the "License");         
 * you may not use this file except in compliance with the License.        
 * You may obtain a copy of the License at                                 
 *                                                                         
 *      http://www.apache.org/licenses/LICENSE-2.0                         
 *                                                                         
 * Unless required by applicable law or agreed to in writing, software     
 * distributed under the License is distributed on an "AS IS" BASIS,       
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and     
 * limitations under the License.                                          
 */                                                                        
package gemlite.core.internal.index.antlr;
import gemlite.core.api.index.IndexManager;
import gemlite.core.internal.domain.DomainRegistry;
import gemlite.core.internal.domain.IMapperTool;
import gemlite.core.internal.support.context.DomainMapperHelper;

import java.util.ArrayList;
import java.util.Collection;
import java.util.HashMap;
import java.util.HashSet;
import java.util.Iterator;
import java.util.List;
import java.util.Map;
import java.util.Set;

import org.antlr.runtime.BitSet;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.ParserRuleReturnScope;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.antlr.stringtemplate.StringTemplate;
import org.antlr.stringtemplate.StringTemplateGroup;
import org.antlr.stringtemplate.language.AngleBracketTemplateLexer;
@SuppressWarnings({"all", "warnings", "unchecked"})
public class CreateIndexParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASC", "A_", "BY", "B_", "COLON", "COMMA", "CREATE", "C_", "DESC", "DOT", "D_", "E_", "FROM", "F_", "G_", "HASHINDEX", "H_", "ID", "INDEX", "INT", "I_", "J_", "K_", "LPAREN", "L_", "M_", "N_", "ON", "ORDER", "O_", "P_", "Q_", "RANGEINDEX", "RPAREN", "R_", "S_", "TO", "T_", "USING", "U_", "V_", "WS", "W_", "X_", "Y_", "Z_"
    };

    public static final int EOF=-1;
    public static final int ASC=4;
    public static final int A_=5;
    public static final int BY=6;
    public static final int B_=7;
    public static final int COLON=8;
    public static final int COMMA=9;
    public static final int CREATE=10;
    public static final int C_=11;
    public static final int DESC=12;
    public static final int DOT=13;
    public static final int D_=14;
    public static final int E_=15;
    public static final int FROM=16;
    public static final int F_=17;
    public static final int G_=18;
    public static final int HASHINDEX=19;
    public static final int H_=20;
    public static final int ID=21;
    public static final int INDEX=22;
    public static final int INT=23;
    public static final int I_=24;
    public static final int J_=25;
    public static final int K_=26;
    public static final int LPAREN=27;
    public static final int L_=28;
    public static final int M_=29;
    public static final int N_=30;
    public static final int ON=31;
    public static final int ORDER=32;
    public static final int O_=33;
    public static final int P_=34;
    public static final int Q_=35;
    public static final int RANGEINDEX=36;
    public static final int RPAREN=37;
    public static final int R_=38;
    public static final int S_=39;
    public static final int TO=40;
    public static final int T_=41;
    public static final int USING=42;
    public static final int U_=43;
    public static final int V_=44;
    public static final int WS=45;
    public static final int W_=46;
    public static final int X_=47;
    public static final int Y_=48;
    public static final int Z_=49;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public CreateIndexParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public CreateIndexParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected StringTemplateGroup templateLib =
  new StringTemplateGroup("CreateIndexParserTemplates", AngleBracketTemplateLexer.class);

public void setTemplateLib(StringTemplateGroup templateLib) {
  this.templateLib = templateLib;
}
public StringTemplateGroup getTemplateLib() {
  return templateLib;
}
/** allows convenient multi-value initialization:
 *  "new STAttrMap().put(...).put(...)"
 */
public static class STAttrMap extends HashMap {
  public STAttrMap put(String attrName, Object value) {
    super.put(attrName, value);
    return this;
  }
  public STAttrMap put(String attrName, int value) {
    super.put(attrName, new Integer(value));
    return this;
  }
}
    public String[] getTokenNames() { return CreateIndexParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\Gemlite\\vmgemlite\\Gemlite-bundle\\Gemlite-runtime\\src\\main\\resources\\CreateIndex.g"; }


    public String getPackageName()
    {
    	return IndexManager.PACKAGE_NAME;
    }


    public static class keyword_return extends ParserRuleReturnScope {
        public String value;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };


    // $ANTLR start "keyword"
    // D:\\Gemlite\\vmgemlite\\Gemlite-bundle\\Gemlite-runtime\\src\\main\\resources\\CreateIndex.g:89:1: keyword returns [String value] : ( CREATE | INDEX | ON | USING | ORDER | BY | ASC | DESC );
    public final CreateIndexParser.keyword_return keyword() throws RecognitionException {
        CreateIndexParser.keyword_return retval = new CreateIndexParser.keyword_return();
        retval.start = input.LT(1);


        Token CREATE1=null;
        Token INDEX2=null;
        Token ON3=null;
        Token USING4=null;
        Token ORDER5=null;
        Token BY6=null;
        Token ASC7=null;
        Token DESC8=null;

        try {
            // D:\\Gemlite\\vmgemlite\\Gemlite-bundle\\Gemlite-runtime\\src\\main\\resources\\CreateIndex.g:90:2: ( CREATE | INDEX | ON | USING | ORDER | BY | ASC | DESC )
            int alt1=8;
            switch ( input.LA(1) ) {
            case CREATE:
                {
                alt1=1;
                }
                break;
            case INDEX:
                {
                alt1=2;
                }
                break;
            case ON:
                {
                alt1=3;
                }
                break;
            case USING:
                {
                alt1=4;
                }
                break;
            case ORDER:
                {
                alt1=5;
                }
                break;
            case BY:
                {
                alt1=6;
                }
                break;
            case ASC:
                {
                alt1=7;
                }
                break;
            case DESC:
                {
                alt1=8;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }

            switch (alt1) {
                case 1 :
                    // D:\\Gemlite\\vmgemlite\\Gemlite-bundle\\Gemlite-runtime\\src\\main\\resources\\CreateIndex.g:90:4: CREATE
                    {
                    CREATE1=(Token)match(input,CREATE,FOLLOW_CREATE_in_keyword724); 

                    retval.value = (CREATE1!=null?CREATE1.getText():null);

                    }
                    break;
                case 2 :
                    // D:\\Gemlite\\vmgemlite\\Gemlite-bundle\\Gemlite-runtime\\src\\main\\resources\\CreateIndex.g:91:3: INDEX
                    {
                    INDEX2=(Token)match(input,INDEX,FOLLOW_INDEX_in_keyword730); 

                    retval.value = (INDEX2!=null?INDEX2.getText():null);

                    }
                    break;
                case 3 :
                    // D:\\Gemlite\\vmgemlite\\Gemlite-bundle\\Gemlite-runtime\\src\\main\\resources\\CreateIndex.g:92:3: ON
                    {
                    ON3=(Token)match(input,ON,FOLLOW_ON_in_keyword736); 

                    retval.value = (ON3!=null?ON3.getText():null);

                    }
                    break;
                case 4 :
                    // D:\\Gemlite\\vmgemlite\\Gemlite-bundle\\Gemlite-runtime\\src\\main\\resources\\CreateIndex.g:93:3: USING
                    {
                    USING4=(Token)match(input,USING,FOLLOW_USING_in_keyword742); 

                    retval.value = (USING4!=null?USING4.getText():null);

                    }
                    break;
                case 5 :
                    // D:\\Gemlite\\vmgemlite\\Gemlite-bundle\\Gemlite-runtime\\src\\main\\resources\\CreateIndex.g:94:3: ORDER
                    {
                    ORDER5=(Token)match(input,ORDER,FOLLOW_ORDER_in_keyword748); 

                    retval.value = (ORDER5!=null?ORDER5.getText():null);

                    }
                    break;
                case 6 :
                    // D:\\Gemlite\\vmgemlite\\Gemlite-bundle\\Gemlite-runtime\\src\\main\\resources\\CreateIndex.g:95:3: BY
                    {
                    BY6=(Token)match(input,BY,FOLLOW_BY_in_keyword754); 

                    retval.value = (BY6!=null?BY6.getText():null);

                    }
                    break;
                case 7 :
                    // D:\\Gemlite\\vmgemlite\\Gemlite-bundle\\Gemlite-runtime\\src\\main\\resources\\CreateIndex.g:96:3: ASC
                    {
                    ASC7=(Token)match(input,ASC,FOLLOW_ASC_in_keyword760); 

                    retval.value = (ASC7!=null?ASC7.getText():null);

                    }
                    break;
                case 8 :
                    // D:\\Gemlite\\vmgemlite\\Gemlite-bundle\\Gemlite-runtime\\src\\main\\resources\\CreateIndex.g:97:3: DESC
                    {
                    DESC8=(Token)match(input,DESC,FOLLOW_DESC_in_keyword766); 

                    retval.value = (DESC8!=null?DESC8.getText():null);

                    }
                    break;

            }
            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "keyword"


    public static class identifier_return extends ParserRuleReturnScope {
        public String value;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };


    // $ANTLR start "identifier"
    // D:\\Gemlite\\vmgemlite\\Gemlite-bundle\\Gemlite-runtime\\src\\main\\resources\\CreateIndex.g:100:1: identifier returns [String value] : ( ID |s1= keyword );
    public final CreateIndexParser.identifier_return identifier() throws RecognitionException {
        CreateIndexParser.identifier_return retval = new CreateIndexParser.identifier_return();
        retval.start = input.LT(1);


        Token ID9=null;
        CreateIndexParser.keyword_return s1 =null;


        try {
            // D:\\Gemlite\\vmgemlite\\Gemlite-bundle\\Gemlite-runtime\\src\\main\\resources\\CreateIndex.g:101:2: ( ID |s1= keyword )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==ID) ) {
                alt2=1;
            }
            else if ( (LA2_0==ASC||LA2_0==BY||LA2_0==CREATE||LA2_0==DESC||LA2_0==INDEX||(LA2_0 >= ON && LA2_0 <= ORDER)||LA2_0==USING) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }
            switch (alt2) {
                case 1 :
                    // D:\\Gemlite\\vmgemlite\\Gemlite-bundle\\Gemlite-runtime\\src\\main\\resources\\CreateIndex.g:101:4: ID
                    {
                    ID9=(Token)match(input,ID,FOLLOW_ID_in_identifier783); 

                    retval.value =(ID9!=null?ID9.getText():null);

                    }
                    break;
                case 2 :
                    // D:\\Gemlite\\vmgemlite\\Gemlite-bundle\\Gemlite-runtime\\src\\main\\resources\\CreateIndex.g:102:4: s1= keyword
                    {
                    pushFollow(FOLLOW_keyword_in_identifier793);
                    s1=keyword();

                    state._fsp--;


                    retval.value = (s1!=null?s1.value:null);

                    }
                    break;

            }
            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "identifier"


    public static class package_name_return extends ParserRuleReturnScope {
        public String packageName;
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };


    // $ANTLR start "package_name"
    // D:\\Gemlite\\vmgemlite\\Gemlite-bundle\\Gemlite-runtime\\src\\main\\resources\\CreateIndex.g:104:1: package_name returns [String packageName] : s1= identifier ( DOT s2= identifier )* ;
    public final CreateIndexParser.package_name_return package_name() throws RecognitionException {
        CreateIndexParser.package_name_return retval = new CreateIndexParser.package_name_return();
        retval.start = input.LT(1);


        CreateIndexParser.identifier_return s1 =null;

        CreateIndexParser.identifier_return s2 =null;


        try {
            // D:\\Gemlite\\vmgemlite\\Gemlite-bundle\\Gemlite-runtime\\src\\main\\resources\\CreateIndex.g:105:7: (s1= identifier ( DOT s2= identifier )* )
            // D:\\Gemlite\\vmgemlite\\Gemlite-bundle\\Gemlite-runtime\\src\\main\\resources\\CreateIndex.g:105:10: s1= identifier ( DOT s2= identifier )*
            {
            pushFollow(FOLLOW_identifier_in_package_name817);
            s1=identifier();

            state._fsp--;


            retval.packageName = (s1!=null?s1.value:null); 

            // D:\\Gemlite\\vmgemlite\\Gemlite-bundle\\Gemlite-runtime\\src\\main\\resources\\CreateIndex.g:106:3: ( DOT s2= identifier )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==DOT) ) {
                    switch ( input.LA(2) ) {
                    case ID:
                        {
                        int LA3_2 = input.LA(3);

                        if ( (LA3_2==DOT) ) {
                            switch ( input.LA(4) ) {
                            case ID:
                                {
                                int LA3_12 = input.LA(5);

                                if ( (LA3_12==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;
                            case CREATE:
                                {
                                int LA3_13 = input.LA(5);

                                if ( (LA3_13==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;
                            case INDEX:
                                {
                                int LA3_14 = input.LA(5);

                                if ( (LA3_14==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;
                            case ON:
                                {
                                int LA3_15 = input.LA(5);

                                if ( (LA3_15==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;
                            case USING:
                                {
                                int LA3_16 = input.LA(5);

                                if ( (LA3_16==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;
                            case ORDER:
                                {
                                int LA3_17 = input.LA(5);

                                if ( (LA3_17==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;
                            case BY:
                                {
                                int LA3_18 = input.LA(5);

                                if ( (LA3_18==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;
                            case ASC:
                                {
                                int LA3_19 = input.LA(5);

                                if ( (LA3_19==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;
                            case DESC:
                                {
                                int LA3_20 = input.LA(5);

                                if ( (LA3_20==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;

                            }

                        }


                        }
                        break;
                    case CREATE:
                        {
                        int LA3_3 = input.LA(3);

                        if ( (LA3_3==DOT) ) {
                            switch ( input.LA(4) ) {
                            case ID:
                                {
                                int LA3_12 = input.LA(5);

                                if ( (LA3_12==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;
                            case CREATE:
                                {
                                int LA3_13 = input.LA(5);

                                if ( (LA3_13==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;
                            case INDEX:
                                {
                                int LA3_14 = input.LA(5);

                                if ( (LA3_14==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;
                            case ON:
                                {
                                int LA3_15 = input.LA(5);

                                if ( (LA3_15==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;
                            case USING:
                                {
                                int LA3_16 = input.LA(5);

                                if ( (LA3_16==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;
                            case ORDER:
                                {
                                int LA3_17 = input.LA(5);

                                if ( (LA3_17==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;
                            case BY:
                                {
                                int LA3_18 = input.LA(5);

                                if ( (LA3_18==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;
                            case ASC:
                                {
                                int LA3_19 = input.LA(5);

                                if ( (LA3_19==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;
                            case DESC:
                                {
                                int LA3_20 = input.LA(5);

                                if ( (LA3_20==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;

                            }

                        }


                        }
                        break;
                    case INDEX:
                        {
                        int LA3_4 = input.LA(3);

                        if ( (LA3_4==DOT) ) {
                            switch ( input.LA(4) ) {
                            case ID:
                                {
                                int LA3_12 = input.LA(5);

                                if ( (LA3_12==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;
                            case CREATE:
                                {
                                int LA3_13 = input.LA(5);

                                if ( (LA3_13==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;
                            case INDEX:
                                {
                                int LA3_14 = input.LA(5);

                                if ( (LA3_14==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;
                            case ON:
                                {
                                int LA3_15 = input.LA(5);

                                if ( (LA3_15==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;
                            case USING:
                                {
                                int LA3_16 = input.LA(5);

                                if ( (LA3_16==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;
                            case ORDER:
                                {
                                int LA3_17 = input.LA(5);

                                if ( (LA3_17==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;
                            case BY:
                                {
                                int LA3_18 = input.LA(5);

                                if ( (LA3_18==DOT) ) {
                                    alt3=1;
                                }


                                }
                                break;
                            case ASC:
                                {
                                int LA3_19 = input.LA(5);
